--- a/index-all.html
+++ b/index-all.html
@@ -9087,6 +9087,8 @@
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/cost/DifferentiableInverseProblemCost.html#getNumberOfGradientCalls()">getNumberOfGradientCalls()</a></span> - Method in class mitiv.cost.<a href="./mitiv/cost/DifferentiableInverseProblemCost.html" title="class in mitiv.cost">DifferentiableInverseProblemCost</a></dt>
 <dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/microscopy/MicroscopyModelPSF1D.html#getNZern()">getNZern()</a></span> - Method in class mitiv.microscopy.<a href="./mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a></dt>
+<dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/deconv/WeightedConvolutionCost.html#getObjectSpace()">getObjectSpace()</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv">WeightedConvolutionCost</a></dt>
 <dd>
 <div class="block">Get the object space of the cost function.</div>
@@ -13051,6 +13053,8 @@
 <dt><span class="strong"><a href="./mitiv/deconv/impl/ConvolutionFloat2D.html#pull(float[])">pull(float[])</a></span> - Method in class mitiv.deconv.impl.<a href="./mitiv/deconv/impl/ConvolutionFloat2D.html" title="class in mitiv.deconv.impl">ConvolutionFloat2D</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/deconv/impl/ConvolutionFloat3D.html#pull(float[])">pull(float[])</a></span> - Method in class mitiv.deconv.impl.<a href="./mitiv/deconv/impl/ConvolutionFloat3D.html" title="class in mitiv.deconv.impl">ConvolutionFloat3D</a></dt>
+<dd>&nbsp;</dd>
+<dt><span class="strong"><a href="./mitiv/microscopy/MicroscopyModelPSF1D.html#pupil_area">pupil_area</a></span> - Variable in class mitiv.microscopy.<a href="./mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy">MicroscopyModelPSF1D</a></dt>
 <dd>&nbsp;</dd>
 <dt><span class="strong"><a href="./mitiv/deconv/Convolution.html#push(mitiv.linalg.shaped.ShapedVector)">push(ShapedVector)</a></span> - Method in class mitiv.deconv.<a href="./mitiv/deconv/Convolution.html" title="class in mitiv.deconv">Convolution</a></dt>
 <dd>
